--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,28 @@
     right: 0;
 }
 
+.faded-background {
+    width: 100%;
+    height: 100vh;
+    background: url("../img/hero-bg.jpg") top center;
+    background-size: cover;
+    position: relative;
+}
+
+.faded-background:before {
+    content: "";
+    background: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.z-100 {
+    z-index: 10000px;
+}
+
 .carousel-item {
     height: 100vh;
 }
